Bug 85167 - Weston running the rpi backend crashes when a window that uses EGL is closed.
Summary: Weston running the rpi backend crashes when a window that uses EGL is closed.
Status: RESOLVED FIXED
Alias: None
Product: Wayland
Classification: Unclassified
Component: weston (show other bugs)
Version: 1.5.0
Hardware: ARM Linux (All)
: medium critical
Assignee: Wayland bug list
QA Contact:
URL: http://patchwork.freedesktop.org/patc...
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2014-10-18 08:22 UTC by Yves De Muyter
Modified: 2015-09-08 13:58 UTC (History)
2 users (show)

See Also:
i915 platform:
i915 features:


Attachments

Description Yves De Muyter 2014-10-18 08:22:10 UTC
Reproducible with the wayland clients/simple-egl application by simply
pressing 'esc' on the window (closes the window) or doing 'ctrl-c' on
the terminal. The result is a Weston crash.

What happens is that the buffer is set to NULL while still used.

See

http://patchwork.freedesktop.org/patch/34885/

for a fix.

-Yves
Comment 1 Yves De Muyter 2014-10-18 08:25:23 UTC
Also still apears in 1.6 and latest master.
Comment 2 Pekka Paalanen 2015-09-08 13:58:52 UTC
Fixed in master, so will be in 1.8.93.

commit 960b5ebd825763c89386f265cb377092beee061a
Author: John Sadler <deathofathousandpapercuts@gmail.com>
Date:   Sat Sep 5 15:01:39 2015 +0100

    rpi: avoid segfault in rpir_view_compute_rects() when EGL client destroys buffer


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.